Closed
Bug 1379095
Opened 9 years ago
Closed 9 years ago
missing nsIRequest in nsAboutCacheEntry::Channel QI
Categories
(Core :: Networking: Cache, defect)
Core
Networking: Cache
Tracking
()
RESOLVED
FIXED
mozilla56
People
(Reporter: schien, Assigned: schien)
Details
(Whiteboard: [necko-active])
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
mayhemer
:
review+
jcristau
:
approval-mozilla-beta+
|
Details |
hit assertion while running netwerk/test/browser/browser_about_cache.js in debug build
>ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr'
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Whiteboard: [necko-active]
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8884225 [details]
Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI.
https://reviewboard.mozilla.org/r/155174/#review160242
Uuups!! Thanks!
Attachment #8884225 -
Flags: review?(honzab.moz) → review+
Pushed by schien@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8e0c107d042f
add nsIRequest in nsAboutCacheEntry::Channel QI. r=mayhemer
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
| Assignee | ||
Comment 5•9 years ago
|
||
@mayhemer do you think this patch worth uplifting to Firefox 55 (which is beta now)?
Flags: needinfo?(honzab.moz)
Comment 6•9 years ago
|
||
(In reply to Shih-Chiang Chien [:schien] (UTC+8) (use ni? plz) from comment #5)
> @mayhemer do you think this patch worth uplifting to Firefox 55 (which is
> beta now)?
Yep.
Flags: needinfo?(honzab.moz)
| Assignee | ||
Comment 7•9 years ago
|
||
Comment on attachment 8884225 [details]
Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1266196
[User impact if declined]: no, fix test case error
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: n/a
[Is the change risky?]: no
[Why is the change risky/not risky?]: one line fix for QueryInterface
[String changes made/needed]: no
Attachment #8884225 -
Flags: approval-mozilla-beta?
Comment 8•9 years ago
|
||
(In reply to Shih-Chiang Chien [:schien] (UTC+8) (use ni? plz) from comment #7)
> Comment on attachment 8884225 [details]
> Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI.
>
> Approval Request Comment
> [Feature/Bug causing the regression]: bug 1266196
> [User impact if declined]: no, fix test case error
So this is an old bug with no user impact? What makes it worth uplifting?
Flags: needinfo?(schien)
| Assignee | ||
Comment 9•9 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #8)
> (In reply to Shih-Chiang Chien [:schien] (UTC+8) (use ni? plz) from comment
> #7)
> > Comment on attachment 8884225 [details]
> > Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI.
> >
> > Approval Request Comment
> > [Feature/Bug causing the regression]: bug 1266196
> > [User impact if declined]: no, fix test case error
>
> So this is an old bug with no user impact? What makes it worth uplifting?
To reduce the noise in test automation.
Flags: needinfo?(schien)
Comment 10•9 years ago
|
||
Comment on attachment 8884225 [details]
Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI.
fix nsAboutCacheEntry::Channel queryinterface, beta55+
Attachment #8884225 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•9 years ago
|
||
| bugherder uplift | ||
status-firefox55:
--- → fixed
Comment 12•9 years ago
|
||
(In reply to Shih-Chiang Chien [:schien] (UTC+8) (use ni? plz) from comment #7)
> [Is this code covered by automated tests?]: yes
> [Has the fix been verified in Nightly?]: yes
> [Needs manual test from QE? If yes, steps to reproduce]: no
Setting qe-verify- based on Shih-Chiang Chien's assessment on manual testing needs and the fact that this fix has automated coverage.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•