Bug 1379095 - add nsIRequest in nsAboutCacheEntry::Channel QI. r=mayhemer a=jcristau

nsAboutCacheEntry::Channel is introduced by Bug 1266196. Assert_NoQueryNeeded() check is failed
due to nsAboutCacheEntry::Channel return nullptr while QI into a nsCOMPtr<nsIRequest> pointer.

MozReview-Commit-ID: 4lYeN4lNtTm